--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -60,7 +60,7 @@ div._systemStatus {
   width: 940px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px + 48px;
+  margin-top: 20px + $tab-bar-height;
   > ._group {
     margin-top: 32px;
     margin-bottom: 64px;
@@ -201,6 +201,9 @@ div._systemStatus {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
+  > ._group:first-child {
+    margin-top: 32px + $tab-bar-height;
+  }
   > ._group {
     margin-top: 32px;
     margin-bottom: 32px;
@@ -503,17 +506,17 @@ div._systemStatus {
   padding-right: 10px;
   font-weight: 300;
   @media (min-width: $wide-lower) {
-    height: 48px - 14px;
+    height: $tab-bar-height - 14px;
     padding-top: 14px;
     font-size: 20px;
   }
   @media (min-width: $medium-lower) and (max-width: $medium-upper) {
-    height: 48px - 16px;
+    height: $tab-bar-height - 16px;
     padding-top: 16px;
     font-size: 18px;
   }
   @media (max-width: $narrow-upper) {
-    height: 48px - 18px;
+    height: $tab-bar-height - 18px;
     padding-top: 18px;
     font-size: 15px;
   }
@@ -590,17 +593,17 @@ body > ._preferences_menu_head {
   padding-right: 10px;
   font-weight: 300;
   @media (min-width: $wide-lower) {
-    height: 48px - 4px;
+    height: $tab-bar-height - 4px;
     padding-top: 14px;
     font-size: 20px;
   }
   @media (min-width: $medium-lower) and (max-width: $medium-upper) {
-    height: 48px - 8px;
+    height: $tab-bar-height - 8px;
     padding-top: 16px;
     font-size: 18px;
   }
   @media (max-width: $narrow-upper) {
-    height: 48px - 12px;
+    height: $tab-bar-height - 12px;
     padding-top: 18px;
     font-size: 15px;
     }
@@ -646,9 +649,9 @@ body > ._preferences_menu_head {
     left: 0px;
     right: 0px;
     top:    0px;
-    bottom: 48px;
+    bottom: $tab-bar-height;
     width: 100%;
-    height: 48px;
+    height: $tab-bar-height;
     background: #33b1ff;
     font-size: 16px;
     overflow: hidden;
@@ -691,7 +694,7 @@ body > ._preferences_menu_head {
     > div._login, > div:not(._nonTab):not(.background) {color: white}
   }
   > .contents {
-    margin-top: 48px;
+    margin-top: $tab-bar-height;
     > div {
       > div.background {
         display: none;
