--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -197,7 +197,7 @@ table._TransactionAndRulesTable {
       color: #bbb;
     }
     &._not_empty:not(._showing) {
-      background-color: #ddd;
+      background-color: #eee;
       color: white;
     }
     &._showing {
