--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -214,8 +214,7 @@ table._TransactionAndRulesTable {
     > div:last-child {
       box-shadow: 0px -1px 1px rgba(0,0,0,.3), 0px -4px 4px rgba(0,0,0,.1);
       width: 100%;
-      height: 8px;
-      padding: -4px;
+      height: 4px;
     }
   }
   ._ImportRulesView {
@@ -273,7 +272,7 @@ table._TransactionAndRulesTable {
           vertical-align: 24%;
        }
       }
-      table > tbody > tr {
+      > fieldset > table > tbody > tr {
         > td {
           padding: 0px 2px;
         }
