--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -187,6 +187,9 @@ table._ImportTransactionsTable._TransactionAndRulesTable._needsAttention {
 }
 
 table._TransactionAndRulesTable {
+  > tbody > tr:not(tuple) > td {
+    height: auto!important;
+  }
   td ._field_rules {
     * {
       font-weight: 100;
@@ -214,7 +217,8 @@ table._TransactionAndRulesTable {
     > div:last-child {
       box-shadow: 0px -1px 1px rgba(0,0,0,.3), 0px -4px 4px rgba(0,0,0,.1);
       width: 100%;
-      height: 4px;
+      height: 8px;
+      padding: -4px;
     }
   }
   ._ImportRulesView {
@@ -225,6 +229,7 @@ table._TransactionAndRulesTable {
     }
     ._rule > fieldset:nth-child(2) {
     }
+
     fieldset {
       fieldset {
         background: #fcfcfc;
