--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -187,7 +187,7 @@ table._ImportTransactionsTable._TransactionAndRulesTable._needsAttention {
 }
 
 table._TransactionAndRulesTable {
-  > tbody > tr:not(tuple) > td {
+  > tbody > tr:not(._tuple) > td {
     height: auto!important;
   }
   td ._field_rules {
@@ -229,10 +229,10 @@ table._TransactionAndRulesTable {
     }
     fieldset {
       fieldset {
-        background: #fcfcfc;
+        //background: #fcfcfc;
         //margin-top: -8px;
         legend {
-          background: #fcfcfc;
+          //background: #fcfcfc;
             span {
               padding-left: 4px; padding-right: 4px;
             }
@@ -250,7 +250,7 @@ table._TransactionAndRulesTable {
             color: #e00000!important;
           }
         }
-        border: 1px solid #bbb;
+        border: 1px solid #ccc;
         > legend {
           > span {
             font-size: 24px;
@@ -266,11 +266,11 @@ table._TransactionAndRulesTable {
         }
       }
       &._part {
-        border: 1px solid #bbb;
+        border: 1px solid #ddd;
         margin-top: 6px;
         > legend span {
           font-size: 18px;
-          color: #bbb;
+          color: #33b1ff;
           vertical-align: 24%;
        }
       }
