--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -34,6 +34,7 @@ body {
 
 ._about {
   @include popup-content();
+  position: absolute;
   display: inline-block;
   border-radius: 6px;
   padding: 16px;
