--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -147,7 +147,7 @@ div._fieldTip {
 }
 
 ._ImportTransactionsTable {
-  margin-top: 24px;
+  margin-top: 12px;
   margin-bottom: 32px;
   width: 1000px;
   clear: left;
@@ -160,18 +160,11 @@ div._fieldTip {
     font-weight: 300;
   }
   > ._button {
-    font-family: 'Linearicons-Free';
+    @include icon-button();
     margin-top: 10px;
-    font-weight: 100;
-    font-size: 20px;
     float: right;
     padding-bottom: 6px;
     padding-left: 16px;
-    color: #33b1ff;
-    &._disabled {
-      color: grey;
-      opacity: .3;
-    }
   }
   > form > table {
     clear: left;
@@ -189,6 +182,7 @@ table._ImportTransactionsTable._TransactionAndRulesTable:not(._needsAttention) {
 table._ImportTransactionsTable._TransactionAndRulesTable._needsAttention {
     @include transaction-table (18px, 13px, 26px, 1, 1, 2, 3, 6, 4, 5, 7, 8, 9, 4, 6, 7);
     > * > tr > td > div._field_importTime {
+      text-align: right;
       color: #ccc;
     }
 }
@@ -406,12 +400,6 @@ table._TransactionAndRulesTable {
     margin-bottom: 12px;
   }
   ._group {
-    &._editable {
-      > ._tuple {
-        margin-top: 6px!important;
-        margin-bottom: 6px!important;
-      }
-    }
     > ._tuple {
       display:        flex;
       flex-direction: row;
@@ -422,7 +410,7 @@ table._TransactionAndRulesTable {
       }
       ._field:nth-child(1) {
          > ._content {
-           width:         90px;
+           width:         120px;
            white-space:   nowrap;
            overflow:      hidden;
            text-overflow: ellipsis;
@@ -434,11 +422,12 @@ table._TransactionAndRulesTable {
       }
       ._field_editable_balance > div ._content {
         padding: 0px;
-        margin: 2px;
-        border: 2px solid transparent;
+        margin: 0px;
+        border: 0px solid transparent;
         background: transparent;
-        width: 75px;
+        width: 100px;
         text-align: right;
+        font-size: 14px;
       }
     }
     > ._tuple:last-child > ._field_editable_balance {margin-bottom: 8px} // last child doesn't get focus outline without this in Safari (Dec 2017)
@@ -579,14 +568,42 @@ div._TransactionHUD {
   }
 }
 
-$import-width:  1155px;
-$import-sidebar-width: 220px;
+
+$import-width:  1100px;
+$import-sidebar-width: 260px;
 ._ImportTransactions > ._AccountBalanceView {
   @include sidebar-right-sidebar($import-width, $import-sidebar-width);
 }
 ._ImportTransactionsContents {
   @include sidebar-right-main($import-width, $import-sidebar-width);
   @include sidebar-right-show($import-width, $import-sidebar-width);
+}
+
+body > ._import_status_popup {
+  @include popup-container();
+  > div {
+    @include user-select (none);
+    position: fixed;
+    right:   12px;
+    top:     60px;
+    padding: 16px;
+    background: rgba(255,255,255,.80);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 6px;
+    box-shadow: $drop-shadow;
+    > div:first-child {
+      font-size: 32px;
+      color: #33b1ff;
+      margin-bottom: 16px;
+    }
+    > div:not(:first-child) {
+      font-weight: 300;
+      padding-left: 32px;
+      color: #666;
+      font-size: 24px;
+    }
+  }
 }
 
 
@@ -603,18 +620,6 @@ $import-sidebar-width: 220px;
     margin-left: 10px;
     padding-left: 8px;
     padding-top: 8px;
-    ._instructions, ._import_status {
-      font-size: 36px;
-      font-weight: 100;
-      margin-bottom: 20px;
-      float: left;
-    }
-    ._instructions {
-      color: #bbb;
-    }
-    ._import_status {
-      color: #888;
-    }
   }
 }
 
