--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -13,6 +13,8 @@ $left-width: 210px;
 $left-padding-left: 8px;
 $left-margin-sep: 20px;
 
+$content-max-width: 1400px;
+
 $medium-lower: 1060px;
 $wide-lower:   1180px;
 $narrow-upper: $medium-lower - 1px;
