--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -61,13 +61,17 @@ div._systemStatus {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px + $tab-bar-height;
+  > ._group:not(:first-child) {
+    margin-top: 80px;
+  }
   > ._group {
     margin-top: 32px;
     margin-bottom: 64px;
     ._title {
-      font-size: 32px;
+      font-size: 42px;
+      font-weight: 300;
       color: #33b1ff;
-      margin-bottom: 8px;
+      margin-bottom: 24px;
     }
     padding: 0px;
     > ._content {
@@ -88,6 +92,9 @@ div._systemStatus {
         ul {
           list-style: none;
           padding-left: 0px;
+        }
+        > li {
+          margin-bottom: 32px;
         }
         > li > ._label {
           margin-top: 16px;
