--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -677,6 +677,16 @@ body > ._preferences_menu_head {
       }
       margin-right: 20px!important;
     }
+    > div._nonTab {
+      > ._sharing, > ._status {
+        @include icon-button();
+        color: white;
+        padding-right: 20px;
+      }
+      > div:last-child {
+        padding-left: 20px;
+      }
+    }
     > div:not(._appName) {
       @media (min-width: $wide-lower) {
         padding-top: 14px;
