Fix problems with category input in transaction list and budgetHUD and picker.

--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -187,6 +187,10 @@ table._ImportTransactionsTable._TransactionAndRulesTable._needsAttention {
     }
 }
 
+div._TransactionAndRulesTable:last-child {
+  padding-bottom: 700px;
+}
+
 table._TransactionAndRulesTable {
   > tbody > tr:not(._tuple) {
     background-color: #fdfdfd!important;
