--- a/code/sass/TransactionTable.scss
+++ b/code/sass/TransactionTable.scss
@@ -187,7 +187,7 @@ table._ImportTransactionsTable._TransactionAndRulesTable._needsAttention {
     }
 }
 
-div._TransactionAndRulesTable:last-child {
+._import > div._TransactionAndRulesTable:last-child {
   padding-bottom: 700px;
 }
 
