--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -50,7 +50,6 @@ body {
 
 ._PathPicker {
   font-size: 13px;
-  display: none;
   position: absolute;
   z-index: 1001;
   > ._pickerContent {
@@ -536,11 +535,11 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
         }
       }
     }
+    ._netWorthTableContainer > ._netWorthTable > tfoot > tr:last-child > td {padding-bottom: 16px}
     ._budgetTable > div > table,
     ._activityTable > div > table,
     ._budgetHistoryTable > div > table,
     ._netWorthTable {
-      > tfoot > tr:last-child > td {padding-bottom: 16px}
       border-collapse: collapse;
       padding: 0px 4px;
       color: #222;
