--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -18,6 +18,16 @@ body > div._blockEverything {
   @include user-select (none);
 }
 
+.fader {
+  opacity: 0;
+  transition: 1000ms opacity;
+}
+
+.fader.fader_visible {
+  opacity: 1;
+  transition: 4000ms opacity;
+}
+
 div._systemStatus {
   opacity: 0;
   position: fixed;
@@ -57,6 +67,7 @@ div._systemStatus {
 }
 
 ._accountsEdit {
+  position: relative;
   width: 940px;
   margin-left: auto;
   margin-right: auto;
