--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -98,7 +98,12 @@ body {
     vertical-align: middle;
     box-shadow: $drop-shadow;
     border-radius: 6px;
+    ._topRow {
+      display: flex;
+      flex-direction: row;
+    }
     ._title {
+      flex-grow: 1;
       margin-bottom: -8px;
       ._content {
         font-size: 28px;
@@ -108,6 +113,15 @@ body {
         background-color: transparent;
         height: auto;
         margin-bottom: 8px;
+      }
+    }
+    ._icons {
+      flex-grow: 0;
+      @include icon-button();
+      > div {
+        display: inline-block;
+        margin-top: 10px;
+        margin-left: $icon-spacing;
       }
     }
     ._graph_title {
@@ -352,19 +366,33 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     > div._popupContent {
       @include popup-content();
       padding-left: 14px;
-      > ._heading {
-        margin-bottom: 24px;
+      > ._topRow {
+        display: flex;
+        flex-direction: row;
+        > ._icons {
+          flex-grow: 0;
+          @include icon-button();
+          > div {
+            display: inline-block;
+            margin-top: 10px;
+            margin-left: $icon-spacing;
+          }
+        }
         > ._heading {
-          font-size:     48px;
-          font-weight:   100;
+          flex-grow: 1;
+          margin-bottom: 24px;
+          > ._heading {
+            font-size:     48px;
+            font-weight:   100;
+          }
+          > ._subheading {
+            color: #666;
+            margin-left: 20px;
+            font-size:   20px;
+            font-weight: 100;
+          }
         }
-        > ._subheading {
-          color: #666;
-          margin-left: 20px;
-          font-size:   20px;
-          font-weight: 100;
-        }
-      }
+    }
     }
   }
 }
