Fix bug where ScheduleEntry fonts were begin applied to BudgetHUD popup.

--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -90,7 +90,7 @@ $indent:       24px;
   @include schedule-entry-base();
   z-index: 1000;
   @include adaptive-width($width-narrow, $width-wide);
-  * {
+  > ul * {
     font-size: $bFont;
     ._content {
       white-space: nowrap;
