--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -178,7 +178,9 @@ body {
   position: absolute;
   background: rgb(255,255,200);
   color: rgb(0,0,35)!important;
-  font-size: 11px!important;
+  &, * {
+    font-size: 11px!important;
+  }
   padding: 3px 6px;
   box-shadow:  0px 0px 2px rgba(0,0,0,.4);
   white-space: nowrap;
@@ -216,8 +218,8 @@ body {
   li._placeholder {
     margin-top: -2px;
     margin-bottom: 0px;
-    border:     1px dashed #8080ff;
-    background: #fafaff;
+    border:     1px dashed rgba(0, 129, 204, .6);
+    background: rgba(0, 129, 204, .04);
   }
   li._placeholder:first-child:not(:last-child),
   li.ui-sortable-helper:first-child + li._placeholder:not(:last-child) {
