Add balanceDate to Account.  Add ability to allow a null date.  Resolve a formatting problem with _error in which field would change size and where red border would not supersede existing border.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -193,10 +193,9 @@ body {
 
 
 ._error {
-  border: 1px solid red;
+  border: 1px solid red!important;
   background: #fff0f0;
   ._content {
-    margin: 1px !important;
     background: #fff0f0;
   }
 }
