Add an async-enabled version of NotifyObservers and use it for update notifications.  Change updateField to be async-enabled and thus get rid of _updateField.  This is needed to ensure that model update sideffects are synchrous with the update so that, ordering constraings between sequential updates are respected.  Issue was that AccountModel assumes that account .balance is correct, but changing debit amount of tran to credit amount generates two updates and if the model updates aren't synchronous the second one arrives at AccountModel before the first has update the balance.

--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -153,14 +153,17 @@ div._systemStatus {
             > ._field {
               border: 1px solid transparent;
             }
-            > ._field_apr ._content, ._field_balance ._content {
+            > ._field_apr ._content, ._field_balance ._content, ._field_accruedInterest ._content {
               text-align: right
             }
             > ._field_apr ._content {
-              width: 100px
+              width: 60px
             }
-            > ._field_balance ._content {
+            > ._field_balance ._content  {
               width: 110px
+            }
+            > ._field_accruedInterest ._content {
+              width: 100px
             }
             > ._field_balanceDate ._content {
               width: 110px;
@@ -168,8 +171,11 @@ div._systemStatus {
             > ._field_type {
               padding-top: 2px;
             }
+            > ._field_creditBalance, ._field_rateType, ._field_paymentFrequency {
+              margin-top: 2px;
+            }
             > ._field_category, ._field_disCategory, ._field_intCategory, ._field_liquid {
-              padding-top: 6px;
+              margin-top: 4px;
               > div > ._content ._suffix {
                 padding-left: 6px;
               }
