Allow 'due' to be entered in amount for account interest transactions.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -193,10 +193,10 @@ body {
 
 
 ._error {
-  border: 1px solid red!important;
-  background: #fff0f0;
+  //border: 1px solid red!important;
+  background: #ffd9d9;
   ._content {
-    background: #fff0f0;
+    background: #ffd9d9;
   }
 }
 
